# ChemDiv_Screening

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: data_description.yaml  model_info.yaml
data/BindingDB/: .gitignore  BindingDB_All.tsv.dvc
data/BindingDB_predprocessed/: .gitignore  BindingDB_v0.parquet.dvc
data/embeddings/: .gitignore
data/proteins/: .gitignore  1O5M_FPT_-_prepared.pdb.dvc  6VKV_GAG_-_prepared.pdb.dvc  6VKV_GAG_sequence.fasta  7L5E_XPO1_-_prepared.pdb.dvc  7L5E_XPO1_sequence.fasta  8QYR_MYH7_-_prepared.pdb.dvc  8QYR_MYH7_sequence.fasta
data/proteins/embeddings/: 105M_FPT_embeddings.npy  6VKV_GAG_embeddings.npy  7L5E_XPO1_embeddings.npy  8QYR_MYH7_embeddings.npy
data/proteins/sequences/: 105M_FPT_sequence.fasta
data/screening_data/: .gitignore  screening.sdf.dvc
data/train/: .gitignore
models/: .gitignore
models/production/: .gitignore  model.py
notebooks/: .gitignore  DeepLPImodel.ipynb  cat_boost_model.ipynb  create_csv.ipynb  data_preparation.ipynb  embeddings_generation.ipynb  feature_selection.ipynb  inference_preparation.ipynb  make_inference.ipynb  target_proteins.ipynb  train.ipynb
scripts/: generate_embeddings.sh
src/: main.py
