[tool.poetry]
name = "chemdiv-screening"
version = "0.1.0"
description = ""
authors = ["Ivan Golov <ivangolov@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = ">=1.26.4,<2.0.0"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
rdkit = ">=2023.9.5,<2024.3.1"
torch-geometric = "^2.6.1"
torch = "2.2.2"
chembl-webresource-client = "^0.10.9"
scikit-learn = "1.2.2"
dvc = "^3.55.2"
hydra-core = "^1.3.2"
jupyter = "^1.1.1"
datamol = "^0.12.5"
molfeat = "^0.10.1"
datasets = "2.20.0"  # Required by pytdc
transformers = "4.43.4"
pytdc = "<1.1.0"
fastparquet = "^2024.5.0"
polars = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
